# Agentic-AI-System-Design

capstone_project/: pyproject.toml
capstone_project/educosys_claude/: config.yaml  main.py
capstone_project/educosys_claude/agent/: factory.py  orchestrator.py  tools.py
capstone_project/educosys_claude/context/indexers/: code_parser.py  factory.py  hybrid_qdrant.py  semantic_chroma.py
capstone_project/educosys_claude/context/retrievers/: factory.py
capstone_project/educosys_claude/llm/: factory.py
capstone_project/educosys_claude/tools/: filesystem_tools.py
rag/: 12_raptorrag.py  1_semanticrag.py  3_semanticrag_ast.py  5_lexical_rag.py  6_hybrid_rag.py  7_rag_metrics.py  8_graphrag.py  requirements.txt  rrf_demo.py
rag_evals/: 1_semantic_rag.py  2_semanticrag_ast_eval.py  3_lexicalrag_eval.py  4_graphrag_eval.py  5_hybridrag_eval.py  golden_dataset.py  requirements.txt
